<resources>
    <string name="app_name">Donut Dash</string>
    <string name="donut_dash">Donut Dash</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="orders">Orders:</string>
    <string name="new_order">New Order</string>
    <string name="large_order">Large Order</string>
    <string name="large_order_query">"""Your order is over 65 donuts.\n There is a %1$s large order fee for large orders.\n\n Would you like to continue?"""</string>
    <string name="fee_applied">Fee Applied</string>
    <string name="remove_donut">To avoid the large order fee, remove donuts until you have less than 65 selected</string>
    <string name="cancel_existing_order">Cancel Existing Order</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="next">Next</string>
    <string name="apple_fritter">Apple Fritter</string>
    <string name="powdered">Powdered</string>
    <string name="boston_creme">Boston Creme</string>
    <string name="lingonberry_jam">Lingonberry Jam</string>
    <string name="churro">Churro</string>
    <string name="taro">Taro</string>
    <string name="caramel">Caramel</string>
    <string name="vanilla">Vanilla</string>
    <string name="berry">Berry</string>
    <string name="chocolate">Chocolate</string>
    <string name="flavor_options">Flavor Options</string>
    <string name="choose_toppings">Choose Your Toppings</string>
    <string name="order_summary">Order Summary</string>
    <string name="submit">Submit</string>
    <string name="_15">15%</string>
    <string name="_18">18%</string>
    <string name="_20">20%</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="custom">Custom</string>
    <string name="tip_amount">Tip\n Amount:</string>
    <string name="order_name">Name for order</string>
    <string name="dates_for_pickup">Dates for pickup</string>
    <string name="times_for_pickup">Times for pickup</string>
    <string name="subtotal">Subtotal:</string>
</resources>