<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="orderSummaryFragment"
            type="com.example.donutdash.ui.main.OrderSummaryFragment" />

        <variable
            name="viewModel"
            type="com.example.donutdash.model.SharedViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.OrderSummaryFragment">

        <TextView
            android:id="@+id/text_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/name_summary"
            android:text="@string/order_summary" />

        <TextView
            android:id="@+id/name_summary"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_summary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/pickup_summary"
            tools:text="Johni Smithers"
            android:text="@{}" />

        <TextView
            android:id="@+id/pickup_summary"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/name_summary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/donuts_summary_scroll"
            tools:text="Friday Jan 4 @ 2:30 p.m."
            android:text="@{}" />

        <ScrollView
            android:id="@+id/donuts_summary_scroll"
            android:layout_width="340dp"
            android:layout_height="240dp"
            app:layout_constraintTop_toBottomOf="@id/pickup_summary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/subtotal_display">

        <TextView
            android:id="@+id/donuts_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="- 3 chocolate w/ sprinkles, strawberries\n\n
- 4 taro w/ oreo crumble, ice cream\n\n
- 1 apple fritter w/ ice cream\n\n
- 6 lingonberry jam w/ caramel drizzle\n\n
- 2 berry w/ NO TOPPING"
            android:text="@{}" />

        </ScrollView>

        <TextView
            android:id="@+id/subtotal_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{}"
            app:layout_constraintBottom_toTopOf="@id/cancel_order_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/donuts_summary_scroll"
            tools:text="Subtotal: $32.59" />

        <LinearLayout
            android:id="@+id/tip_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/subtotal_display"
            app:layout_constraintBottom_toTopOf="@id/total_display">

            <TextView
                android:id="@+id/text_tip"
                android:layout_width="65dp"
                android:layout_height="55dp"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:text="@string/tip_amount" />

            <Button
                android:id="@+id/fifteen_percent"
                android:layout_width="62dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:text="@string/_15" />

            <Button
                android:id="@+id/eighteen_percent"
                android:layout_width="62dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:text="@string/_18" />

            <Button
                android:id="@+id/twenty_percent"
                android:layout_width="62dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="5dp"
                android:text="@string/_20" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/custom_tip"
                android:hint="@string/custom"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:layout_width="88dp"
                android:layout_height="wrap_content" >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/total_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{}"
            app:layout_constraintBottom_toTopOf="@id/submit_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tip_box"
            tools:text="Total: $32.59" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="17dp"
            android:onClick="@{() -> orderSummaryFragment.submitOrder()}"
            android:text="@string/submit"
            app:layout_constraintBottom_toTopOf="@id/cancel_order_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/total_display" />

        <Button
            android:id="@+id/cancel_order_button"
            android:layout_width="360dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="35dp"
            android:onClick="@{() -> orderSummaryFragment.cancelOrder()}"
            android:text="@string/cancel_order"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/submit_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>