<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.donutdash.model.SharedViewModel" />

        <variable
            name="landingFragment"
            type="com.example.donutdash.ui.main.LandingFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.main.LandingFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/brand_identity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:gravity="center"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/donut_dash"
                android:textSize="48sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/orders_holder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/brand_identity">

                <TextView
                    android:id="@+id/order_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:gravity="center"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:text="@string/orders"
                    android:textSize="36sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/order_recycler_view"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    android:layout_width="match_parent"
                    android:layout_height="198dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="4dp"
                    android:padding="4dp" />

            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="275dp"
                android:layout_marginStart="-95dp"
                android:layout_marginEnd="-95dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintBottom_toTopOf="@id/new_order_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/orders_holder">

                <ImageView
                    android:layout_width="65dp"
                    android:layout_height="65dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/donut" />

            </FrameLayout>

            <Button
                android:id="@+id/cancel_existing_order_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:onClick="@{() -> }"
                android:text="@string/cancel_existing_order"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/new_order_button"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/new_order_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="4dp"
                android:onClick="@{() -> }"
                android:text="@string/new_order"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cancel_existing_order_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>